--- a/view/login.html
+++ b/view/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE>
 <html>
 <head>
-<title>FastLine</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<link rel="stylesheet" href="http://semantic-ui.com/dist/semantic.min.css"/>
-<script src="http://semantic-ui.com/dist/semantic.min.js"></script>
+<title>Log-in</title>
+  <script src="js/jquery.js"></script>
+<link rel="stylesheet" href="stylesheets/semantic.min.css"/>
+<script src="js/semantic.min.js"></script>
 
 
 
