--- a/view/update.html
+++ b/view/update.html
@@ -1,30 +1,22 @@
 <!DOCTYPE>
 <html>
 <head>
-<title>FastLine</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<link rel="stylesheet" href="http://semantic-ui.com/dist/semantic.min.css"/>
-<script src="http://semantic-ui.com/dist/semantic.min.js"></script>
-<script src="http://patrickgawron.com/wp/wp-content/uploads/2013/11/jquery.address.js"></script>  
+<title>Update <%= member.member.name %></title>
+  <script src="js/jquery.js"></script>
+<link rel="stylesheet" href="/stylesheets/semantic.min.css"/>
+<script src="js/semantic.min.js"></script>
 <style type="text/css">
     body {
       background-color: white;
+      margin:10px 40px 0 40px;
     }
-    body > .grid {
-    }
-    .image {
-      margin-top: -100px;
-    }
+
     .column {
       max-width: 1200px;
 
 
     }
-  
 
-    .ui.menu{
-      height:40px;
-    }
 
   .ui.segment{
     width: 50%;
@@ -39,13 +31,13 @@
 </head>
  
 <body>
-<br/>
+
 <div class="ui center aligned container">
-<a href='/' class="ui small image"><img src="logo.png" ></a></div>
+<a href='/' class="ui small image"><img src="/logo.png" ></a></div>
 <div class="ui inverted red stackable container menu">
   <a class="item" >Home</a>
-  <a class="active item" href="/new">New Member</a>
-  <a class="item" href="/new">Update/Search Member</a>
+  <a class="item" href="/new">New Member</a>
+  <a class="active item" href="/new">Update/Search Member</a>
   <a class="item" href="/allmembers">View All member</a>
   <div class="right item">
     | Welcome! <%= user.exec.username %> |    
