--- a/view/search.html
+++ b/view/search.html
@@ -8,27 +8,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properties -->
-  <title>Pick a truck</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<link rel="stylesheet" href="http://semantic-ui.com/dist/semantic.min.css"/>
-<script src="http://semantic-ui.com/dist/semantic.min.js"></script>
+  <title>Search</title>
+  <script src="js/jquery.js"></script>
+<link rel="stylesheet" href="stylesheets/semantic.min.css"/>
+<script src="js/semantic.min.js"></script>
 <!--<script src="http://patrickgawron.com/wp/wp-content/uploads/2013/11/jquery.address.js"></script> !-->
 <style type="text/css">
+   body{
+      margin:10px 40px 0 40px;
+    }
     #card{
       margin-top: 100px;
 
-    }
-    .ui.menu{
-    height:40px;
-    }
-    body{
-      margin:10px 40px 0 40px;
     }
 
    .ui.grid{
        width: 50%;
     margin: 0 auto; 
    }
+@media (max-width: 600px) {
+
+  .ui.input{
+    width:200px;
+  }
+}
 
 
     </style>
@@ -40,9 +43,10 @@
 </head>
 <body>
 <div class="ui center aligned container">
-<a href='/' class="ui small image"><img src="logo.png" ></a></div>
+<a href='/' class="ui small image"><img src="logo.png" ></a>
+</div>
 <div class="ui inverted red stackable container menu">
-  <a class="item" >Home</a>
+  <a class="item" href="/home">Home</a>
   <a class="item" href="/new">New Member</a>
   <a class="active item" href="/search">Update/Search Member</a>
   <a class="item" href="/allmembers">View All member</a>
@@ -58,7 +62,7 @@
 <div class="ui red huge center aligned header"> Perform your search</div>
 
 
-  <div id="body" class="ui two column grid">
+  <div id="body" class="ui two column stackable grid">
 <div class="ui center aligned column">
 <div>
 <a class="ui blue button" href="/show/1415">Show 14-15 Members</a></div><br/>
@@ -66,8 +70,15 @@
 <div><a class="ui blue button" href="/show/1617">Show 16-17 Members</a></div><br/>
 </div>
 <div class="ui center aligned column">
+<form class="ui center aligned form" action='/searchname' method='POST'>
+    <label>Search by name</label><div class="ui action input">
+        
+        <input type="text" name="name" required/>
+      
 
-<form class="ui form" action='/' method='POST'>
+      <input class="ui green button" type="submit" value='Search'></input></div>
+</form>
+<form class="ui center aligned form" action='/searchyear' method='POST'>
     <label>Show member from follow year</label><div class="ui action input">
         
         <input type="text" name="year" required/>
@@ -76,7 +87,7 @@
       <input class="ui green button" type="submit" value='Search'></input></div>
 </form>
 
-<form class="ui form" action='/' method='POST'>
+<form class="ui form" action='/searchprogram' method='POST'>
      <label>Show member from follow program</label><div class="ui action input">
        
         <input type="text" name="program" required/>
