updated after club day

--- a/view/allmembers.html
+++ b/view/allmembers.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <div class="ui center aligned container">
-<a href='/' class="ui small image"><img src="logo.png" ></a></div>
+<a href='/' class="ui small image"><img src="/logo.png" ></a></div>
 <div class="ui inverted red stackable container menu">
   <a class="item" href="/home">Home</a>
   <a class="item" href="/new">New Member</a>
