--- a/view/index.html
+++ b/view/index.html
@@ -105,7 +105,7 @@
   </div>
   
   <div class="ui center aligned vertical footer segment">
-    <p>Design by Chris Lu</p>
+    <p>International Cantonese Union 16-17</p>
   </div>   
 
  
