--- a/view/search.html
+++ b/view/search.html
@@ -81,7 +81,15 @@
 <form class="ui center aligned form" action='/searchyear' method='POST'>
     <label>Show member from follow year</label><div class="ui action input">
         
-        <input type="text" name="year" required/>
+                 <select class="ui selection dropdown" name="year">
+                  <option value="1">Year 1</option>
+              <option value="2">Year 2</option>
+              <option value="3">Year 3</option>
+              <option value="4">Year 4</option>
+              <option value="grad">Graduate</option>
+             
+
+                </select>
       
 
       <input class="ui green button" type="submit" value='Search'></input></div>
@@ -90,7 +98,17 @@
 <form class="ui form" action='/searchprogram' method='POST'>
      <label>Show member from follow program</label><div class="ui action input">
        
-        <input type="text" name="program" required/>
+                              <select class="ui selection dropdown" name="program">
+                  <option value="Rotman">Rotman</option>
+              <option value="Architecture">Architecture</option>
+              <option value="Math">Math/Physical science</option>
+              <option value="CS">Computer Science</option>
+              <option value="Lifesci">Life Science</option>
+              <option value="Engineering">Engineering</option>
+              <option value="Arts">Arts</option>
+              <option value="Other">Others</option>
+
+                </select>
       
 
       <input class="ui green button" type="submit" value='Search'></input></div>
