--- a/view/index.html
+++ b/view/index.html
@@ -25,8 +25,8 @@
  
       margin:10px 40px 0 40px;
     
-    background: url('bg.png') no-repeat;
-    background-position: 50% 50%;
+    background: url('group.jpg') no-repeat;
+    background-position: 50% 65%;
     background-size: 75% 65% ;
   }
 @media (max-width: 600px) {
