--- a/view/register.html
+++ b/view/register.html
@@ -29,7 +29,7 @@
 <div class="ui center aligned container">
 <a href='/' class="ui small image"><img src="/logo.png" ></a></div>
 <div class="ui inverted red stackable container menu">
-  <a class="item" >Home</a>
+  <a class="item" href="/home">Home</a>
   <a class="active item" href="/new">New Member</a>
   <a class="item" href="/search">Update/Search Member</a>
   <a class="item" href="/allmembers">View All member</a>
@@ -90,9 +90,9 @@
                       <select class="ui fluid dropdown" name="program">
                   <option value="Rotman">Rotman</option>
               <option value="Architecture">Architecture</option>
-              <option value="Math">Math/Physical science</option>
-              <option value="CS">Computer Science</option>
-              <option value="Lifesci">Life Science</option>
+              <option value="Math and Physical Science">Math and Physical Science</option>
+              <option value="Computer Science">Computer Science</option>
+              <option value="Life Science">Life Science</option>
               <option value="Engineering">Engineering</option>
               <option value="Arts">Arts</option>
               <option value="Other">Others</option>
