added /home redirect to pages

--- a/view/update.html
+++ b/view/update.html
@@ -35,7 +35,7 @@
 <div class="ui center aligned container">
 <a href='/' class="ui small image"><img src="/logo.png" ></a></div>
 <div class="ui inverted red stackable container menu">
-  <a class="item" >Home</a>
+  <a class="item" href="/home">Home</a>
   <a class="item" href="/new">New Member</a>
   <a class="active item" href="/new">Update/Search Member</a>
   <a class="item" href="/allmembers">View All member</a>
