update all emails phones

--- a/view/search.html
+++ b/view/search.html
@@ -70,7 +70,10 @@
       
       <div><a class="ui blue button" href="/show/1415">Show 14-15 Members</a></div><br/>
       <div><a class="ui blue button" href="/show/1516">Show 15-16 Members</a></div></br>
-      <div><a class="ui blue button" href="/show/1617">Show 16-17 Members</a></div><br/>
+      <div><a class="ui blue button" href="/show/1617">Show 16-17 Members</a></div><br/><br/>
+
+       <div><a class="ui blue button" href="/allemails">Show All Email</a></div><br/>
+        <div><a class="ui blue button" href="/allphones">Show All Phone</a></div><br/>
       </div>
 
 
