--- a/view/update.html
+++ b/view/update.html
@@ -56,6 +56,10 @@
 
  <div class="ui center aligned segment" id="truck" >
       <form class="ui form" action='/update' method='POST'>
+                    <div class="field">
+                <label>Name</label>
+                <input type="text" name="membername" value='<%= member.member.name %>'>
+              </div>
               <div class="field">
                 <label>Email</label>
                 <input type="text" name="email" value='<%= member.member.email %>'>
